[gd_scene load_steps=3 format=3 uid="uid://dr2w1jraqh6yi"]

[ext_resource type="Script" path="res://base.gd" id="1_q7tx3"]
[ext_resource type="Script" path="res://scroll.gd" id="2_bouqo"]

[node name="Base" type="CanvasLayer"]
script = ExtResource("1_q7tx3")

[node name="CommandLine" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LineEdit" type="LineEdit" parent="CommandLine"]
layout_mode = 2
placeholder_text = "Enter a command..."
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.05
anchor_right = 0.99
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("2_bouqo")

[node name="TextHistory" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="text_submitted" from="CommandLine/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
